--- a/backend/.gitignore
+++ b/backend/.gitignore
@@ -33,3 +33,10 @@ lerna-debug.log*
 !.vscode/tasks.json
 !.vscode/launch.json
 !.vscode/extensions.json
+
+# env
+.env
+
+# prisma
+prisma/dev.db
+prisma/dev.db-journal
