--- a/backend/.gitignore
+++ b/backend/.gitignore
@@ -36,7 +36,10 @@ lerna-debug.log*
 
 # env
 .env
+.env.*
 
 # prisma
 prisma/dev.db
 prisma/dev.db-journal
+prisma/testing.db
+prisma/testing.db-journal
