--- a/backend/package.json
+++ b/backend/package.json
@@ -10,14 +10,14 @@
     "build": "nest build",
     "format": "prettier --write \"src/**/*.ts\" \"test/**/*.ts\"",
     "start": "nest start",
-    "start:dev": "dotenv -e .env.development nest start --watch",
-    "start:debug": "dotenv -e .env.development nest start --debug --watch",
+    "start:dev": "dotenv -e .env.development -- nest start --watch",
+    "start:debug": "dotenv -e .env.development -- nest start --debug --watch",
     "start:prod": "node dist/main",
     "lint": "eslint \"{src,apps,libs,test}/**/*.ts\" --fix",
-    "test": "dotenv -e .env.test jest",
-    "test:watch": "dotenv -e .env.test jest --watch",
-    "test:cov": "dotenv -e .env.test jest --coverage",
-    "test:debug": "dotenv -e .env.test node --inspect-brk -r tsconfig-paths/register -r ts-node/register node_modules/.bin/jest --runInBand",
+    "test": "dotenv -e .env.test -- jest",
+    "test:watch": "dotenv -e .env.test -- jest --watch",
+    "test:cov": "dotenv -e .env.test -- jest --coverage",
+    "test:debug": "dotenv -e .env.test -- node --inspect-brk -r tsconfig-paths/register -r ts-node/register node_modules/.bin/jest --runInBand",
     "test:e2e": "dotenv -e .env.test -- jest --config ./test/jest-e2e.json",
     "prisma:migrate": "dotenv -e .env.development -- prisma migrate dev --name init",
     "prisma:migrate:test": "dotenv -e .env.test -- prisma migrate dev --name init"
