--- a/backend/package.json
+++ b/backend/package.json
@@ -14,14 +14,14 @@
     "start:debug": "dotenv -e .env.development -- nest start --debug --watch",
     "start:prod": "node dist/main",
     "lint": "eslint \"{src,apps,libs,test}/**/*.ts\" --fix",
-    "test": "dotenv -e .env.test -- jest",
-    "test:watch": "dotenv -e .env.test -- jest --watch",
+    "test": "dotenv -e .env.test -- prisma migrate deploy && jest",
+    "test:watch": "dotenv -e .env.test -- prisma migrate deploy && jest --watch",
     "test:cov": "dotenv -e .env.test -- jest --coverage",
     "test:debug": "dotenv -e .env.test -- node --inspect-brk -r tsconfig-paths/register -r ts-node/register node_modules/.bin/jest --runInBand",
-    "test:e2e": "dotenv -e .env.test -- jest --config ./test/jest-e2e.json --runInBand",
+    "test:e2e": "dotenv -e .env.test -- prisma migrate deploy && dotenv -e .env.test -- jest --config ./test/jest-e2e.json --runInBand",
     "prisma:generate": "dotenv -e .env.development -- prisma generate",
     "prisma:migrate": "dotenv -e .env.development -- prisma migrate dev --name init",
-    "prisma:migrate:test": "dotenv -e .env.test -- prisma migrate dev --name init"
+    "prisma:migrate:test": "dotenv -e .env.test -- prisma migrate deploy"
   },
   "dependencies": {
     "@nestjs/common": "^9.0.0",
